--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -37,8 +37,8 @@
                 <div class="list-social">
                   <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                   <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
-                  <a href="#"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
-                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <!-- <a href="#"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
+                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> -->
                   <!-- <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a> -->
                   <!-- <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> -->
                 </div>
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <p class="copyright">Wada Bangladesh Limited © 2020-2021 by wada.com.bd. All rights reserved. </p>
+            <p class="copyright">Wada Bangladesh Limited © 2020-2021 All rights reserved. </p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <p class="designby">Design & Develop by: <a href="mailto:nazmuldipu@gmail.com">Nazmul Alam</a></p>
