--- a/src/home/components/login-form/login-form.component.scss
+++ b/src/home/components/login-form/login-form.component.scss
@@ -1,4 +1,7 @@
 @import "../../../assets/theme.scss";
+.w-link {
+  color: $primary-color;
+}
 .home-link {
   text-decoration: none;
   color: $primary-text-color;
