--- a/src/home/containers/cart/cart.component.scss
+++ b/src/home/containers/cart/cart.component.scss
@@ -60,7 +60,7 @@
 //     color: black;
 //   }
 //   &-quantity {
-//     color: #f40;
+//     color: $primary-color;
 //     & i {
 //       cursor: pointer;
 //       //   color: black;
