--- a/src/home/containers/details/details.component.scss
+++ b/src/home/containers/details/details.component.scss
@@ -445,6 +445,9 @@ sup {
 .soc-twitter {
   background: #1da1f2;
 }
+.soc-instagram {
+  background: #3f729b;
+}
 .soc-print {
   background: #738a8d;
 }
