--- a/src/shared/components/product2/product2.component.scss
+++ b/src/shared/components/product2/product2.component.scss
@@ -86,10 +86,10 @@
     }
     .details {
       text-decoration: none;
-      color: #005ba2;
+      color: #28a745;
       font-weight: 700;
       &:hover {
-        background-color: #005ba2;
+        background-color: #28a745;
         color: white;
       }
     }
