--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -3,7 +3,8 @@ $primary-color: #c3161c;
 $primary-color-light: #e71c23;
 $primary-color-text: #ffffff;
 $accent-color: #fcd304;
-$web-color:#951b81;
+$web-color: #951b81;
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
-$divider-color:  #e8e9ea;
+$divider-color: #e8e9ea;
+$link-color: #d90000;
