--- a/src/dashboard/products/containers/new-products/new-products.component.html
+++ b/src/dashboard/products/containers/new-products/new-products.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-9 bg-white">
             <product-form [item]="product" [brands]="brandPage?.docs" [categories]="categoryPage?.docs"
                 [subCategories]="subCategoryPage?.docs" [subSubCategories]="subSubCategoryPage?.docs"
-                (create)="onCreate($event)" (update)="onUpdate($event)" (delete)="onDelete($event)"
+                [err]="errorMessage" (create)="onCreate($event)" (update)="onUpdate($event)" (delete)="onDelete($event)"
                 (selectCategory)="handleCateogySelect($event)" (selectSubCategory)="handleSubCateogySelect($event)">
             </product-form>
         </div>
