--- a/src/home/components/user-details-form/user-details-form.component.html
+++ b/src/home/components/user-details-form/user-details-form.component.html
@@ -15,7 +15,7 @@
 
             <!-- Buttons -->
             <span (mouseenter)="mouseoverShifting = true" (mouseleave)="mouseoverShifting = false">
-                <button type="submit" class="btn btn-sm btn-primary" [disabled]="!form.valid">Register</button>
+                <button type="submit" class="btn btn-sm btn-success" [disabled]="!form.valid">Register</button>
             </span>
 
             <!-- Form validation error list -->
