--- a/src/home/containers/category/category.component.scss
+++ b/src/home/containers/category/category.component.scss
@@ -158,7 +158,7 @@
 .sub-category-item.active {
   color: $primary-color-light;
   font-weight: 600;
-  background-color: lightcyan;
+  background-color:  #dedede;
 }
 
 // label {
