user profile and change password done

--- a/src/home/components/topbar/topbar.component.html
+++ b/src/home/components/topbar/topbar.component.html
@@ -20,10 +20,10 @@
       <a class="link user dropbtn" title="Register"><span>{{(userService.user$ | async).name || 'Profile'}}</span></a>
       <div class="dropdown-content right-s" style="width: 180px">
         <a routerLink="/dashboard" *ngIf="!authService.isUser()"><i class="fa fa-bars"></i> Dashboard</a>
-        <a routerLink="/" *ngIf="authService.isUser()"><i class="fa fa-user"></i> Profile</a>
+        <a routerLink="/profile" *ngIf="authService.isUser()"><i class="fa fa-user"></i> Profile</a>
         <a routerLink="/orders" *ngIf="authService.isUser()"><i class="fa fa-file-text-o"></i> Orders </a>
         <a routerLink="/cart" *ngIf="authService.isUser()"><i class="fa fa-shopping-cart"></i> Cart</a>
-        <a routerLink="/" *ngIf="authService.isUser()"><i class="fa fa-key"></i> Chage Password</a>
+        <a routerLink="/change-password" *ngIf="authService.isUser()"><i class="fa fa-key"></i> Chage Password</a>
         <a (click)="onLogout()" routerLink="/"><i class="fa fa-unlock-alt"></i> Logout</a>
       </div>
     </div>
