--- a/src/home/containers/details/details.component.html
+++ b/src/home/containers/details/details.component.html
@@ -34,9 +34,9 @@
                             <ul class="list-social-detail list-inline-block">
                                 <!-- <li><a class="soci-fa soc-tumblr"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
                                 </li> -->
-                                <li><a class="soci-fa soc-facebook"><i class="fa fa-facebook"
+                                <li><a href="https://www.facebook.com/wada.com.bd" target="_blank" class="soci-fa soc-facebook"><i class="fa fa-facebook"
                                             aria-hidden="true"></i></a></li>
-                                <li><a class="soci-fa soc-instagram"><i class="fa fa-instagram"
+                                <li><a href="https://www.instagram.com/wada.com.bd/" target="_blank" class="soci-fa soc-instagram"><i class="fa fa-instagram"
                                             aria-hidden="true"></i></a></li>
                                 <!-- <li><a class="soci-fa soc-twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                 </li>
