--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -35,10 +35,10 @@
               <div class="social-footer footer-box">
                 <h2 class="title14">Stay Connected</h2>
                 <div class="list-social">
-                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
-                  <!-- <a href="#"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
-                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> -->
+                  <a href="https://www.facebook.com/wada.com.bd" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/wada.com.bd/" target="_blank"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
+                  <a href="https://bd.linkedin.com/company/wada-com-bd" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a href="https://www.youtube.com/channel/UCYMl5847E2-UweMNaEO978g" target="_blank"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
                   <!-- <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a> -->
                   <!-- <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> -->
                 </div>
