report dashboard created

--- a/src/dashboard/containers/index/index.component.html
+++ b/src/dashboard/containers/index/index.component.html
@@ -1,1 +1,37 @@
-<p>index works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-3 mb-4" *ngFor="let object of head_data">
+            <div class="card widget-overview-box" [style.border-left-color]="object.background">
+                <div>
+                    <span class="overview-icon" [ngStyle]="{'color':object.color, 'background':object.background}"><i
+                            class="fa" [class]="object.icon" aria-hidden="true"></i></span>
+                    <span class="overview-title">{{object.label}}</span>
+                </div>
+                <div class="row overview-detail">
+                    <div class="col-6" *ngFor="let arr of object.values">
+                        <div class="overview-number">{{arr.amount}}</div>
+                        <div class="overview-subtext">{{arr.label}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <div class="card widget-overview-box ">
+                <div>
+                    <span class="overview-icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+                    <span class="overview-title">Quick Links</span>
+                </div>
+                <div class="list-group">
+                    <ng-container *ngFor="let li of quickLinks">
+                        <a class="list-group-item list-group-item-action" [routerLink]="li.url">
+                            {{li.name}}
+                        </a>
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
