--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -1,8 +1,9 @@
-<home-hero *ngIf="hero" [hero]="hero" [isAuthenticated]="authService.isAuthenticated()" [imageUrl]="imageUrl" >
+<home-hero *ngIf="hero" [hero]="hero" [isAuthenticated]="authService.isAuthenticated()" [imageUrl]="featureImageUrl" >
 </home-hero>
 <!-- <categories></categories> -->
-<app-feature-banner *ngIf="multibuy" [feature]="multibuy" [headline]="'Exclusive Multibuy'" [imageUrl]="imageUrl"></app-feature-banner>
-<app-feature-banner *ngIf="special" [feature]="special" [headline]="'Special Offer'" [imageUrl]="imageUrl"></app-feature-banner>
-<app-featured-offers *ngIf="featured.length" [featured]="featured" [imageUrl]="imageUrl"></app-featured-offers>
+<popular-products [products]="products" [thumbUrl]="productThumbUrl"></popular-products>
+<app-feature-banner *ngIf="multibuy" [feature]="multibuy" [headline]="'Exclusive Multibuy'" [imageUrl]="featureImageUrl"></app-feature-banner>
+<app-feature-banner *ngIf="special" [feature]="special" [headline]="'Special Offer'" [imageUrl]="featureImageUrl"></app-feature-banner>
+<app-featured-offers *ngIf="featured.length" [featured]="featured" [imageUrl]="featureImageUrl"></app-featured-offers>
 <!-- <front-special-offer></front-special-offer> -->
 <!-- <offers></offers> -->
