--- a/src/home/containers/change-password/change-password.component.scss
+++ b/src/home/containers/change-password/change-password.component.scss
@@ -3,6 +3,6 @@
   font-family: Montserrat, sans-serif;
   display: block;
   position: relative;
-  min-height: calc(100% - 57px);
+  min-height: calc(100vh - 485px);
   background-color: #f2f4f5;
 }
