--- a/src/home/containers/order-confirm/order-confirm.component.html
+++ b/src/home/containers/order-confirm/order-confirm.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row" *ngIf="!order">
         <div class="offset-md-3 col-md-6">
-            <app-address-form (create)="onCreate($event)"></app-address-form>
+            <app-address-form (create)="onCreate($event)" (update)="onCreate($event)" [item]="user"></app-address-form>
         </div>
     </div>
 
