--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -49,7 +49,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="contact-footer-box footer-box">
               <h2 class="title14">contact us</h2>
-              <p class="formule-address"> Suit# 13, Level# 4, Sahera Tropical Center <br> 218, Elephant Road, Dhaka-1205
+              <p class="formule-address"> Suite# 13, Level# 4, Sahera Tropical Center <br> 218, Elephant Road, Dhaka-1205
               </p>
               <p class="formule-phone">+88 01730785675-9 </p>
               <p class="formule-email"><a href="mailto:support@wada.com.bd">support@wada.com.bd</a></p>
