--- a/src/home/containers/privacy/privacy.component.html
+++ b/src/home/containers/privacy/privacy.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 bg-white my-3 text-justify">
-            <h3 class="text-center "><u>Privacy Policy</u></h3>
+            <h3 class="text-center my-3">Privacy Policy</h3>
 
             <strong>How are we using this information?</strong>
             <p>Wada has used this information to identify customers within our records, so that we can contact them to
