--- a/src/home/containers/return/return.component.html
+++ b/src/home/containers/return/return.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 bg-white my-3 text-justify">
-            <h3 class="text-center "><u>Return & Refund Policy</u></h3>
+            <h3 class="text-center my-3">Return & Refund Policy</h3>
 
             <strong>Make changes or Cancelling Your Online Order and Refund Process</strong>
             <ol>
