--- a/src/home/containers/terms/terms.component.html
+++ b/src/home/containers/terms/terms.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 bg-white my-3 text-justify">
-            <h3 class="text-center "><u>Terms & Conditions</u></h3>
+            <h3 class="text-center my-3">Terms & Conditions</h3>
             <p>The terms and conditions for the use of our website and for offer, bonus, savings scheme, your
                 relationship with Wada Bangladesh Limited have been mentioned below:</p>
             <p>Please read these terms and conditions carefully. By using our website, snatch our offer or put forward
