small bug fix and design update

--- a/src/home/components/user-details-form/user-details-form.component.html
+++ b/src/home/components/user-details-form/user-details-form.component.html
@@ -22,7 +22,12 @@
             <div *ngIf="mouseoverShifting" class="text-danger">
                 <form-validator [form]="form"></form-validator>
             </div>
-        </div>
 
+
+            <div class="my-3">
+                <small>By clicking Register button, you to our <a routerLink="/terms">Terms & Conditions</a> and that
+                    you read our <a routerLink="/privacy">Privacy Policy</a>.  </small>
+            </div>
+        </div>
     </form>
 </div>
