--- a/src/home/containers/details/details.component.html
+++ b/src/home/containers/details/details.component.html
@@ -34,9 +34,11 @@
                             <ul class="list-social-detail list-inline-block">
                                 <!-- <li><a class="soci-fa soc-tumblr"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
                                 </li> -->
-                                <li><a href="https://www.facebook.com/wada.com.bd" target="_blank" class="soci-fa soc-facebook"><i class="fa fa-facebook"
+                                <li><a href="https://www.facebook.com/wada.com.bd" target="_blank"
+                                        class="soci-fa soc-facebook"><i class="fa fa-facebook"
                                             aria-hidden="true"></i></a></li>
-                                <li><a href="https://www.instagram.com/wada.com.bd/" target="_blank" class="soci-fa soc-instagram"><i class="fa fa-instagram"
+                                <li><a href="https://www.instagram.com/wada.com.bd/" target="_blank"
+                                        class="soci-fa soc-instagram"><i class="fa fa-instagram"
                                             aria-hidden="true"></i></a></li>
                                 <!-- <li><a class="soci-fa soc-twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                 </li>
@@ -57,6 +59,7 @@
 
                             <div class="product-detail-price">
                                 <ins><span>৳ {{product?.price}}</span></ins>
+                                <del *ngIf="product.mrp>0"><span>৳ {{product?.mrp}}</span></del>
                             </div>
 
                             <div class="product-detail-available">
@@ -64,7 +67,7 @@
                                 <span class="in-stock">{{stockQuantity > 0 ? 'In Stock':'Out of Stock'}}</span>
                             </div>
 
-                            <a class="mail-to-friend" href="#">Email to a Friend</a>
+                            <!-- <a class="mail-to-friend" href="#">Email to a Friend</a> -->
                             <div class="product-detail-size">
                                 <div class="product-detail-size-title">
                                     <strong><sup>*</sup>Size:</strong><span
