--- a/src/home/containers/features/features.component.html
+++ b/src/home/containers/features/features.component.html
@@ -28,7 +28,7 @@
         </button>
     </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 p-0">
             <infinite-scroll (scrolled)="onScroll()">
                 <div class="row clearfix m-0">
                     <div class="col-12 text-center" *ngIf="productList?.length == 0">
