--- a/src/shared/components/product-box/product-box.component.scss
+++ b/src/shared/components/product-box/product-box.component.scss
@@ -46,3 +46,10 @@
     border: 1px solid $primary-color;
   }
 }
+
+// @media (max-width: 767px) {
+//   .banner-image {
+//     height: auto;
+//     margin: 5px auto;
+//   }
+// }
