--- a/src/home/components/user-details-form/user-details-form.component.scss
+++ b/src/home/components/user-details-form/user-details-form.component.scss
@@ -18,3 +18,11 @@
   padding: 16px 60px;
   margin-bottom: 15px;
 }
+@media (max-width: 767px) {
+  .title {
+    padding: 16px;
+  }
+  .form-block {
+    padding: 16px;
+  }
+}
