--- a/src/home/containers/cart/cart.component.html
+++ b/src/home/containers/cart/cart.component.html
@@ -2,7 +2,7 @@
     <h3><i class="fa fa-frown-o" aria-hidden="true"></i> Your cart is empty.</h3>
 </div> -->
 <div class="cart">
-    <div class="container pt-4" *ngIf="!order && cart?.product_list?.length > 0">
+    <div class="container p-1 pt-md-3 px-md-3" *ngIf="!order && cart?.product_list?.length > 0">
         <div class="row">
             <div class="col-12">
                 <div class="card mb-5">
@@ -15,11 +15,11 @@
                                 <thead>
                                     <tr>
                                         <!-- Set columns width -->
-                                        <th class="text-center py-2 px-4" style="min-width: 400px;">Product Name &amp;
+                                        <th class="col-details">Product Name &amp;
                                             Details</th>
-                                        <th class="text-right py-2 px-4" style="width: 100px;">Price</th>
-                                        <th class="text-center py-2 px-4" style="width: 150px;">Quantity</th>
-                                        <th class="text-right py-2 px-4" style="width: 100px;">Total</th>
+                                        <th class="col-price">Price</th>
+                                        <th class="col-quantity">Quantity</th>
+                                        <th class="col-price">Total</th>
                                         <!-- <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#"
                                             class="shop-tooltip float-none text-light" title=""
                                             data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th> -->
@@ -41,12 +41,12 @@
                                                 </div>
                                             </div>
                                         </td>
-                                        <td class="text-right font-weight-semibold align-middle p-2">৳ {{ item.rate }}
+                                        <td class="text-right font-weight-semibold align-middle p-2">৳{{ item.rate }}
                                         </td>
-                                        <td class="align-middle p-2">
+                                        <td class="align-middle p-md-2">
                                             <i class="fa fa-minus  border p-1 rounded-sm"
                                                 (click)="setQuantity(item.product._id, -1)"></i>
-                                            &nbsp; {{ item.quantity }} &nbsp;
+                                            <span class="quantity-amount">{{ item.quantity }}</span>
                                             <i class="fa fa-plus border p-1 rounded-sm"
                                                 (click)="setQuantity(item.product._id, 1)"></i>
                                         </td>
