--- a/src/home/containers/category/category.component.scss
+++ b/src/home/containers/category/category.component.scss
@@ -42,12 +42,6 @@
   }
 }
 
-// :host {
-//   display: block;
-//   background: #f8f8f9 none repeat scroll 0 0;
-//   z-index: 0;
-// }
-
 .banner-image {
   width: 100%;
   height: 180px;
@@ -55,6 +49,13 @@
   margin: 10px auto;
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 767px) {
+  .banner-image {
+    height: auto;
+    margin: 5px auto;
+  }
 }
 
 .col-left,
@@ -77,6 +78,16 @@
   flex: 0 0 calc(100% - 220px);
   max-width: calc(100% - 220px);
   padding-left: 0;
+}
+
+@media (max-width: 767px) {
+  .col-left {
+    display: none;
+  }
+  .col-right {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
 
 // .banner-links {
@@ -158,7 +169,7 @@
 .sub-category-item.active {
   color: $primary-color-light;
   font-weight: 600;
-  background-color:  #dedede;
+  background-color: #dedede;
 }
 
 // label {
