--- a/src/shared/components/modal-message/modal-message.component.scss
+++ b/src/shared/components/modal-message/modal-message.component.scss
@@ -3,6 +3,11 @@
   width: 525px;
   margin: 30px auto;
 }
+@media (max-width: 767px) {
+  .modal-confirm {
+    width: 95%;    
+  } 
+}
 .modal-confirm .modal-content {
   padding: 20px;
   font-size: 16px;
