--- a/src/shared/components/popular-products/popular-products.component.html
+++ b/src/shared/components/popular-products/popular-products.component.html
@@ -5,9 +5,9 @@
                 <span>Popular Products</span>
             </div>
         </div>
-        <div class="col-12 p-0 p-3 popular-products">
-            <div class="row m-0">
-                <div class="col-6 col-md-3 px-1" *ngFor="let product of products">
+        <div class="col-12 p-0 p-md-3 popular-products">
+            <div class="row m-0 p-1">
+                <div class="col-6 col-md-3 p-1" *ngFor="let product of products">
                     <product-box [product]="product" [thumbUrl]="thumbUrl"></product-box>
                 </div>
             </div>
