--- a/src/home/components/detail-modal/detail-modal.component.html
+++ b/src/home/components/detail-modal/detail-modal.component.html
@@ -1,4 +1,10 @@
 <div class="row">
+    <div class="col-12 p-0">
+        <button type="button" class="close" (click)="onDismiss()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
     <div class="col-md-6 col-12">
         <img class="img-fluid mx-auto mb-2" [src]="imageUrls[current]?.image" alt="">
         <ng-image-slider #nav [images]="imageUrls" [infinite]="false" [autoSlide]="1" [imagePopup]="false"
@@ -6,9 +12,6 @@
         </ng-image-slider>
     </div>
     <div class="col-md-6 col-12">
-        <button type="button" class="close" (click)="onDismiss()" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
         <h3 class="" id="editProfileLabel">{{product.name}}</h3>
         <div class="text-secondary">{{product.size}}</div>
         <div class="product-price">
